# donation_project

./: .env.example  .gitignore  Dockerfile  README.md  create_superuser.py  docker-compose.yml  entrypoint.sh  pyproject.toml  run_mock_data.py
Postman_Collections/: donation_project.postman_collection.json
config/: celery.py  settings.py  urls.py
core/: admin.py  constants.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
core/management/commands/: generate_mock_data.py
core/migrations/: 0001_initial.py  0002_alter_collect_options_alter_payment_options_and_more.py  0003_alter_collect_options_alter_payment_options_and_more.py  0004_rename_author_payment_donor.py  0005_alter_collect_options_alter_payment_options_and_more.py  0006_alter_paymentcomment_unique_together.py  0007_alter_paymentcomment_options_and_more.py  0008_alter_paymentcomment_payment.py  0009_alter_paymentlike_payment.py  0010_alter_paymentcomment_options_and_more.py
management/commands/: generate_mock_data.py
